--- a/src/sass/_subscribe.scss
+++ b/src/sass/_subscribe.scss
@@ -67,6 +67,7 @@
       left: 0;
       width: 50%;
       top: 50%;
+      min-height: min-content;
 
       font-family: $main-font-title;
       // font-size: 3em;
